incorporated new pages and nav panel

--- a/BlazorApp/BlazorApp.csproj
+++ b/BlazorApp/BlazorApp.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Components\Pages\Event.razor.css" />
+    <Content Include="Components\Pages\Event.razor.css" />
+  </ItemGroup>
+
 </Project>
