--- a/BlazorApp/BlazorApp.csproj
+++ b/BlazorApp/BlazorApp.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <None Remove="Components\Pages\Event.razor.css" />
     <Content Include="Components\Pages\Event.razor.css" />
+    <PackageReference Include="Blazor.Bootstrap" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
