--- a/BlazorApp/BlazorApp.csproj
+++ b/BlazorApp/BlazorApp.csproj
@@ -10,6 +10,8 @@
     <None Remove="Components\Pages\Event.razor.css" />
     <Content Include="Components\Pages\Event.razor.css" />
     <PackageReference Include="Blazor.Bootstrap" Version="2.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0-preview.2.24128.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0-preview.2.24128.4" />
   </ItemGroup>
 
 </Project>
