--- a/BlazorApp/appsettings.json
+++ b/BlazorApp/appsettings.json
@@ -1,12 +1,12 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:matmatchmaker.database.windows.net,1433;Initial Catalog=matmatchmaker;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active,Directory,Default;"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:matmatchmaker.database.windows.net,1433;Initial Catalog=matmatchmaker;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active,Directory,Default;"
+  }
 }
