--- a/BlazorApp/appsettings.json
+++ b/BlazorApp/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:matmatchmaker.database.windows.net,1433;Initial Catalog=matmatchmaker;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active,Directory,Default;"
+    "DefaultConnection": "Server=tcp:matmatchmaker.database.windows.net,1433;Database=matmatchmaker;User ID=mmmADL;Password=j9cG6qv$$Wx88iG;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
