--- a/BlazorApp/BlazorApp.csproj
+++ b/BlazorApp/BlazorApp.csproj
@@ -7,11 +7,40 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="DataAccessLibrary\.idea\.idea.DataAccessLibrary.dir\.idea\indexLayout.xml" />
+    <Content Include="DataAccessLibrary\.idea\.idea.DataAccessLibrary.dir\.idea\projectSettingsUpdater.xml" />
+    <Content Include="DataAccessLibrary\.idea\.idea.DataAccessLibrary.dir\.idea\vcs.xml" />
+    <Content Include="DataAccessLibrary\.idea\.idea.DataAccessLibrary.dir\.idea\workspace.xml" />
+    <Content Include="DataAccessLibrary\DataAccessLibrary.csproj" />
+    <Content Include="obj\Debug\net8.0\apphost" />
     <None Remove="Components\Pages\Event.razor.css" />
     <Content Include="Components\Pages\Event.razor.css" />
     <PackageReference Include="Blazor.Bootstrap" Version="2.0.0" />
+    <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.26" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Server" Version="3.0.0-preview3-19153-02" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0-preview.2.24128.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0-preview.2.24128.4" />
+    <Content Remove="DataAccessLibrary\**" />
+    <None Remove="DataAccessLibrary\**" />
+    
+    
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="DataAccessLibrary\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Remove="DataAccessLibrary\**" />
+  </ItemGroup>
+
+
+
+  
+
+  
+
+  
 
 </Project>
