--- a/BlazorApp/appsettings.json
+++ b/BlazorApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:matmatchmaker.database.windows.net,1433;Database=matmatchmaker;User ID=mmmADL;Password=j9cG6qv$$Wx88iG;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
