matchviewer fixes, other stuff tooo

--- a/BlazorApp/appsettings.json
+++ b/BlazorApp/appsettings.json
@@ -8,5 +8,14 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=tcp:matmatchmaker.database.windows.net,1433;Database=matmatchmaker;User ID=mmmADL;Password=j9cG6qv$$Wx88iG;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+  "MailSettings": {
+    "Username": "amrgm@umsystem.edu",
+    "Password": "insertEmail",
+    "Port": 465,
+    "FromEmail": "amrgm@umsystem.edu",
+    "Host": "smtp-mail.outlook.com"
   }
+
+  
 }
