--- a/BlazorApp/BlazorApp.csproj
+++ b/BlazorApp/BlazorApp.csproj
@@ -15,6 +15,7 @@
     <Content Include="obj\Debug\net8.0\apphost" />
     <None Remove="Components\Pages\Event.razor.css" />
     <Content Include="Components\Pages\Event.razor.css" />
+    <PackageReference Include="BCrypt.Net-Core" Version="1.6.0" />
     <PackageReference Include="Blazor.Bootstrap" Version="2.0.0" />
     <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
     <PackageReference Include="Blazored.SessionStorage" Version="2.4.0" />
