Email relay troubleshooting

--- a/BlazorApp/appsettings.json
+++ b/BlazorApp/appsettings.json
@@ -11,7 +11,7 @@
   },
   "MailSettings": {
     "Username": "amrgm@umsystem.edu",
-    "Password": "insertEmail",
+    "Password": "",
     "Port": 465,
     "FromEmail": "amrgm@umsystem.edu",
     "Host": "smtp-mail.outlook.com"
